<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Todo</string>
    <string name="title_activity_todo_list">Todo</string>
    <string name="title_activity_todo_details">TodoDetails</string>
    <string name="create">Создать</string>
    <string name="sort">Сортировать</string>
    <string name="back">Назад</string>
    <string name="save">Сохранить</string>
    <string name="new_document">Новая заметка</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="confirm_delete_todo">Вы действительно хотите удалить заметку?</string>
    <string name="empty_list">(нет заметок)</string>
    <string name="search_title">Поиск</string>
    <string name="sort_date">По дате</string>
    <string name="sort_name">По названию</string>
    <string name="sort_priority">По приоритету</string>
    <string name="priority">Приоритет</string>
    <string name="low">Низкий</string>
    <string name="middle">Средний</string>
    <string name="high">Высокий</string>
    <string name="photo">Фото</string>
    <string name="confirm_delete_image">Вы действительно хотите удалить изображение?</string>
    <string name="has_image">(изобр.)</string>
    <string name="title_activity_full_image">FullImage</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>
