<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_delete_check"
        android:icon="@drawable/delete_icon_selector"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/delete">
    </item>
    
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/sort_icon_selector"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/sort">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/menu_sort_date"
                    android:checked="true"
                    android:title="@string/sort_date"/>
                <item
                    android:id="@+id/menu_sort_name"
                    android:title="@string/sort_name"/>
                <item
                    android:id="@+id/menu_sort_priority"
                    android:title="@string/sort_priority"/>
            </group>
        </menu>
    </item>
    
    <item       
        android:id="@+id/menu_new_task"
        android:icon="@drawable/new_task_icon_selector"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/create"/>

</menu>